--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ node_js:
   - "4.1"
   - "4.0"
   - "0.12"
-  - "0.11"
-  - "0.10"
-  - "0.8"
-  - "0.6"
+
+notifications:
+  slack: gab-project:B06sOTldqFNp7pTSGUHJtGJd
