--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ node_js:
   - "0.12"
 
 notifications:
-  slack: gab-project:B06sOTldqFNp7pTSGUHJtGJd
+  slack: "gab-project:B06sOTldqFNp7pTSGUHJtGJd"
 
 deploy:
-  provider: heroku
+  provider: "heroku"
   api_key: "9a24b740-d45d-41b2-a3bd-01cc46af69a1"
+  app : "gab-project"
