--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,5 @@ deploy:
   provider: heroku
   api_key: "9a24b740-d45d-41b2-a3bd-01cc46af69a1"
   app : "gab-project"
+  on:
+  repo: jindev/g-project
