--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "chalk": "^1.1.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "^2.3.4",
     "express": "~4.13.1",
+    "glob": "^5.0.15",
+    "lodash": "^3.10.1",
     "mongoose": "^4.1.11",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
